<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Sheets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Music Sheets</string>
    <string name="image">image</string>
    <string name="compose">Compose</string>
    <string name="display">Display</string>
    <string name="set">Settings</string>
    <string name="o">Other features</string>
    <string name="user_profile">User Profile</string>
    <string name="music_transcription">Music Transcription</string>
    <string name="website">Website</string>
    <string name="sharing">Sharing</string>
</resources>
