<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".51"
        android:src="@drawable/s"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="14.2dp"
        android:contentDescription="@string/image" />

    <Button
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/compose"
        android:id="@+id/button2"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"
        style="@style/text"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:id="@+id/button"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"
        style="@style/text"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:id="@+id/button3"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"
        style="@style/text"
        android:onClick="onClick"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:id="@+id/button4"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"
        style="@style/text"
        android:onClick="onClick"/>

</LinearLayout>
